# FastAPISource

fastapi-3tier-architecture/: .env  .gitignore  README.md  pyproject.toml  requirements.txt
fastapi-3tier-architecture/app/: cli.py  const.py  exc.py  main.py
fastapi-3tier-architecture/app/backend/: config.py  session.py
fastapi-3tier-architecture/app/models/: __init__.py  base.py
fastapi-3tier-architecture/app/routers/: movies.py
fastapi-3tier-architecture/app/schemas/: movies.py
fastapi-3tier-architecture/app/services/: base.py  movies.py
fastapi-3tier-architecture/app/sql/: myapi.sql
fastapi-3tier-architecture/tests/: conftest.py  test_models.py
fastapi-jwt/: .env.example  requirements.txt
fastapi-jwt/app/: api.py
fastapi-jwt/app/auth/: auth_handler.py
jwt-fastapi/: main.py
jwt-fastapi/app/: api.py  models.py
jwt-fastapi/app/auth/: auth_bearer.py  auth_handler.py
